# ai-solutions

./: .gitmodules  CLAUDE.md  README.md
.github/workflows/: ci.yml
vlm_op_profiler/: .clang-format  .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  requirements.txt
vlm_op_profiler/cli/: vlm_op_profiler.cpp  vlm_op_profiler.py
vlm_op_profiler/docs/: design.md  output_format.md  supported_models.md
vlm_op_profiler/scripts/: aggregate.py  fetch_models.sh  fetch_models_hf.py  generate_test_images.py  run_suite.py  run_suite.sh  summarize.py  validate.py
vlm_op_profiler/scripts/tests/: conftest.py  test_aggregate.py  test_regression.py  test_summarize.py  test_validate.py
vlm_op_profiler/src/: backend_stats.cpp  backend_stats.h  graph_walker.cpp  graph_walker.h  layer_classifier.cpp  layer_classifier.h  phase_tracker.cpp  phase_tracker.h
